[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Sounds/boo.wav" type="AudioStream" id=1]
[ext_resource path="res://Resources/Sounds/wow.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://spawnCurve.tres" type="Curve2D" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/EnemySpawnPath.gd" type="Script" id=7]
[ext_resource path="res://Scripts/KillSlowdownTimer.gd" type="Script" id=8]
[ext_resource path="res://Scripts/SfxPlayer.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Border.gd" type="Script" id=10]
[ext_resource path="res://Resources/Graphics/Background.png" type="Texture" id=11]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ArenaCamera" type="Camera2D" parent="."]
pause_mode = 1
anchor_mode = 0
zoom = Vector2( 2, 2 )

[node name="Background" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 1920, 1080 )
scale = Vector2( 2, 2 )
z_index = -2
texture = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 1019.09, 725.787 )

[node name="Border" type="StaticBody2D" parent="."]
pause_mode = 1
visible = false
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Border"]
polygon = PoolVector2Array( 970.368, 168.562, 278.538, 172.799, 250.992, 178.097, 234.041, 186.572, 217.09, 196.108, 205.435, 208.821, 194.841, 221.535, 186.365, 233.189, 181.068, 244.843, 175.5, 263.5, 172.5, 280.5, 172.5, 299.5, 172.5, 322, 174.043, 788.928, 178.205, 815.09, 184.151, 834.712, 195.448, 852.55, 206.151, 865.037, 220.422, 878.118, 234.097, 887.037, 252.53, 895.362, 267.395, 901.902, 294.747, 903.686, 309.612, 902.497, 1064.45, 903.488, 1076.34, 1067.86, 25.0787, 1058.35, 41.7275, 45.1421, 957.417, 57.0342 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Border"]
polygon = PoolVector2Array( 960.718, 168.815, 1625.97, 170.069, 1645.31, 171.923, 1654.32, 173.777, 1663.32, 178.015, 1673.12, 182.253, 1684.25, 189.405, 1692.99, 194.172, 1701.99, 199.205, 1709.41, 209.005, 1717.88, 220.129, 1725.56, 233.372, 1732.45, 245.556, 1739.87, 267.805, 1743.31, 285.286, 1744.37, 309.918, 1743.31, 326.34, 1742.83, 802.667, 1738.16, 814.347, 1730.15, 833.369, 1715.8, 858.063, 1695.11, 876.751, 1672.09, 890.767, 1649.73, 898.776, 1632.38, 902.113, 1609.02, 904.115, 1047.01, 903.778, 1055.35, 1063.23, 1859.01, 1045.78, 1875.01, 59.7809, 947.014, 55.7809 )

[node name="EnemySpawnPath" type="Path2D" parent="."]
pause_mode = 1
curve = ExtResource( 4 )
script = ExtResource( 7 )

[node name="EnemySpawnTimer" type="Timer" parent="EnemySpawnPath"]
wait_time = 3.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="BooPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
script = ExtResource( 9 )
pitchVariation = 0.5

[node name="WowPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
script = ExtResource( 9 )
pitchVariation = 0.5

[node name="KillSlowdownTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.03
one_shot = true
script = ExtResource( 8 )
[connection signal="boosted" from="Player" to="." method="_on_Player_boosted"]
[connection signal="playerDied" from="Player" to="EnemySpawnPath" method="_on_Player_playerDied"]
[connection signal="shot" from="Player" to="." method="_on_Player_shot"]
[connection signal="enemySpawned" from="EnemySpawnPath" to="HUD" method="_on_EnemySpawnPath_enemySpawned"]
[connection signal="timeout" from="EnemySpawnPath/EnemySpawnTimer" to="EnemySpawnPath" method="_on_EnemySpawnTimer_timeout"]
[connection signal="restartGame" from="HUD" to="." method="_on_HUD_restartGame"]
[connection signal="scoreChanged" from="HUD" to="." method="_on_HUD_scoreChanged"]
[connection signal="timeout" from="KillSlowdownTimer" to="KillSlowdownTimer" method="_on_KillSlowdownTimer_timeout"]
